feat: add empty values for signature flow creation

--- a/app/templates/signatures/index.hbs
+++ b/app/templates/signatures/index.hbs
@@ -112,7 +112,15 @@
         <h5 class="auk-h4">{{this.piece.name}}</h5>
         <div class="auk-o-flex auk-o-flex--spaced-wide auk-u-mt-1">
           <AuLink
-            @skin="button-naked"
+            @skin="naked"
+            @icon="book"
+            @route="document"
+            @model={{this.piece.id}}
+          >
+            {{t "preview"}}
+          </AuLink>
+          <AuLink
+            @skin="naked"
             @icon="document"
             @route="agenda.agendaitems.agendaitem"
             @models={{array this.meeting.id this.agenda.id this.agendaitem.id}}
@@ -120,6 +128,102 @@
             {{t "consult-agendaitem-decision"}}
           </AuLink>
         </div>
+        <Auk::Panel class="auk-u-mt-4">
+          <Auk::Panel::Header class="auk-u-px-1">
+            <Auk::Toolbar as |Toolbar|>
+              <Toolbar.Group @position="left" as |Group|>
+                <Group.Item>
+                  <h4 class="auk-h4 auk-u-m-0">
+                    {{t "to-sign-by"}}
+                  </h4>
+                </Group.Item>
+              </Toolbar.Group>
+              <Toolbar.Group @position="right" as |Group|>
+                <Group.Item>
+                  <AuButton @skin="secondary" @icon="pencil">
+                    {{t "edit-list"}}
+                  </AuButton>
+                </Group.Item>
+              </Toolbar.Group>
+            </Auk::Toolbar>
+          </Auk::Panel::Header>
+          <Auk::Panel::Body class="auk-u-p-0">
+            <Auk::List @bordered={{true}}>
+              {{#each this.signers}}
+                <Auk::List::Item class="auk-o-flex auk-o-flex--justify-between auk-o-flex--vertical-center">
+                </Auk::List::Item>
+              {{else}}
+                <Auk::List::Item>
+                  {{t "no-signers-selected"}}
+                </Auk::List::Item>
+              {{/each}}
+            </Auk::List>
+          </Auk::Panel::Body>
+        </Auk::Panel>
+        <Auk::Panel class="auk-u-mt-4">
+          <Auk::Panel::Header class="auk-u-px-1">
+            <Auk::Toolbar as |Toolbar|>
+              <Toolbar.Group @position="left" as |Group|>
+                <Group.Item>
+                  <h4 class="auk-h4 auk-u-m-0">
+                    {{t "to-approve-by"}}
+                  </h4>
+                </Group.Item>
+              </Toolbar.Group>
+              <Toolbar.Group @position="right" as |Group|>
+                <Group.Item>
+                  <AuButton @skin="secondary" @icon="plus">
+                    {{t "add"}}
+                  </AuButton>
+                </Group.Item>
+              </Toolbar.Group>
+            </Auk::Toolbar>
+          </Auk::Panel::Header>
+          <Auk::Panel::Body class="auk-u-p-0">
+            <Auk::List @bordered={{true}}>
+              {{#each this.approvers}}
+                <Auk::List::Item class="auk-o-flex auk-o-flex--justify-between auk-o-flex--vertical-center">
+                </Auk::List::Item>
+              {{else}}
+                <Auk::List::Item>
+                  {{t "no-approvers-selected"}}
+                </Auk::List::Item>
+              {{/each}}
+            </Auk::List>
+          </Auk::Panel::Body>
+        </Auk::Panel>
+        <Auk::Panel class="auk-u-mt-4">
+          <Auk::Panel::Header class="auk-u-px-1">
+            <Auk::Toolbar as |Toolbar|>
+              <Toolbar.Group @position="left" as |Group|>
+                <Group.Item>
+                  <h4 class="auk-h4 auk-u-m-0">
+                    {{t "signing-hub-notifications"}}
+                  </h4>
+                </Group.Item>
+              </Toolbar.Group>
+              <Toolbar.Group @position="right" as |Group|>
+                <Group.Item>
+                  <AuButton @skin="secondary" @icon="plus">
+                    {{t "add"}}
+                  </AuButton>
+                </Group.Item>
+              </Toolbar.Group>
+            </Auk::Toolbar>
+          </Auk::Panel::Header>
+          <Auk::Panel::Body class="auk-u-p-0">
+            <Auk::List @bordered={{true}}>
+              {{#each this.notificationAddresses}}
+                <Auk::List::Item class="auk-o-flex auk-o-flex--justify-between auk-o-flex--vertical-center">
+                </Auk::List::Item>
+              {{else}}
+                <Auk::List::Item>
+                  {{t "no-notification-addresses-selected"}}
+                </Auk::List::Item>
+              {{/each}}
+            </Auk::List>
+          </Auk::Panel::Body>
+        </Auk::Panel>
       </div>
       <div class="auk-sidebar__footer">
       </div>
