feat: link export PDF button

--- a/app/components/agenda/agendaitem/agendaitem-decision.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-decision.hbs
@@ -15,7 +15,7 @@
             <AuButton
               @icon="pdf"
               @skin="naked"
-              {{on "click" this.showDocument}}
+              {{on "click" this.exportPDF}}
             >
               {{t "export-as-pdf"}}
             </AuButton>
