--- a/app/components/agenda/agendaitem/agendaitem-decision.hbs
+++ b/app/components/agenda/agendaitem/agendaitem-decision.hbs
@@ -127,13 +127,27 @@
         <Auk::Panel::Body
           class="au-o-flow {{if this.isEditing 'au-u-background-gray-100'}}"
         >
-          <Agenda::Agendaitem::DecisionViewer
+          {{! TODO: decide if we want to use this }}
+          {{!-- <Agenda::Agendaitem::DecisionViewer
             {{did-insert this.setDecisionViewerElement}}
             @meeting={{@agendaContext.meeting}}
             @agendaitem={{@agendaContext.agendaitem}}
             @concernsHtmlString={{this.betreftPiecePart.value}}
             @decisionHtmlString={{this.beslissingPiecePart.value}}
-          />
+          /> --}}
+
+          <AuContent @size="small">
+            <h4>Betreft :</h4>
+            <SanitizeHtml
+              @raw={{true}}
+              @value={{this.betreftPiecePart.value}}
+            />
+            <h4>Beslissing :</h4>
+            <SanitizeHtml
+              @raw={{true}}
+              @value={{this.beslissingPiecePart.value}}
+            />
+          </AuContent>
         </Auk::Panel::Body>
       {{/if}}
     {{/if}}
